# rkp

./: Cargo.toml  rust-toolchain.toml
assets/: packets.json
client/: Cargo.toml
client/src/: main.rs
protocol/: Cargo.toml
protocol/src/: bounded.rs  decode.rs  encode.rs  lib.rs  packet_io.rs  varint.rs
protocol/src/clientbound/: mod.rs
protocol/src/clientbound/login/: encryption_request.rs  login_compression.rs  login_disconnect.rs  login_success.rs  mod.rs
protocol/src/clientbound/status/: ping_response.rs  status_response.rs
protocol/src/clientbound/transfer/: data.rs
protocol/src/impls/: mod.rs  other.rs  primitive.rs  sequence.rs  string.rs
protocol/src/serverbound/: mod.rs
protocol/src/serverbound/handshake/: intention.rs  mod.rs
protocol/src/serverbound/login/: encryption_response.rs  hello.rs  login_acknowledged.rs  mod.rs
protocol/src/serverbound/status/: ping_request.rs  status_request.rs
protocol/src/serverbound/transfer/: client_information.rs  data.rs  mod.rs
protocol_macros/: Cargo.toml
protocol_macros/src/: decode.rs  encode.rs  lib.rs  packet.rs
server/: Cargo.toml
server/src/: connection.rs  main.rs  ping.rs  server.rs
