[package]
name = "protocol"
version = "0.1.0"
edition = "2024"
build = "build/build.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
uuid.workspace = true

thiserror = "2.0"
derive_more = { version = "2.0", features = ["full"] }

byteorder = "1.5"
bytes = "1.10"

aes = "0.8"
cfb8 = "0.8"
flate2 = "1.1"

log = "0.4"

valence_text = { git = "https://github.com/valence-rs/valence.git", package = "valence_text" }


protocol_macros = { path = "../protocol_macros" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
heck = "0.5"