[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
rand.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
uuid.workspace = true

rsa = "0.9"
rsa-der = "0.3"

valence_text = { git = "https://github.com/valence-rs/valence.git", package = "valence_text" }

protocol = { path = "../protocol" }